--- a/_specs/ecip-1111.md
+++ b/_specs/ecip-1111.md
@@ -256,46 +256,7 @@ The Olympia upgrade is intentionally limited in scope. It activates only two Eth
 
 These EIPs improve transaction pricing and EVM compatibility without altering existing contract behavior or consensus security.
 
-All other Ethereum Foundation EIPs — spanning from **Tangerine Whistle (2016)** to **Prague-Electra (2025)** — were reviewed and explicitly excluded based on one or more of the following criteria:
-
-- **Tied to Proof-of-Stake** — Depends on Ethereum’s beacon chain, validator withdrawals, or finality gadgets incompatible with ETC’s Proof-of-Work model  
-- **Consensus Incompatibility** — Assumes execution-layer merge logic or trusted randomness  
-- **Lack of Ecosystem Demand** — No significant usage or tooling dependencies identified among ETC users or developers  
-- **Immutability Risk** — Changes semantics of deployed contracts or introduces backward-incompatible state behavior
-
-This selective approach ensures Ethereum Classic remains compatible with the broader EVM ecosystem while preserving its core principles of **immutability**, **Proof-of-Work**, and **backward compatibility**.
-
-#### Future Considerations: Toward Full EVM Compatibility
-
-While Olympia is limited to EIP-1559 and EIP-3198, other EIPs have been identified as technically and philosophically compatible with ETC’s PoW model and may be considered for future upgrades. Potential candidates include:
-
-| EIP    | Title                                   | Justification                                                                                         |
-|--------|-----------------------------------------|--------------------------------------------------------------------------------------------------------|
-| 1283   | SSTORE Gas Metering Changes             | Improves storage efficiency; widely supported by tooling and compilers. Low risk, high utility.       |
-| 5656   | MCOPY Memory Instruction                | Performance optimization; enables zkApps and L2 tooling without PoS coupling.                         |
-| 6780   | SELFDESTRUCT Semantics Change           | Aligns with Shanghai semantics; requires review, but improves consistency across EVM chains.          |
-| 1153   | Transient Storage Opcodes               | Supports modern dApp patterns; required for advanced use cases and L2 interoperability.               |
-| 2935   | Save Historical Block Hashes in State   | Enables native access to past block hashes for oracles and randomness. Useful for protocol design.    |
-| 7623   | Increase Calldata Cost                  | Disincentivizes calldata abuse; aligns ETC with EIP-4844-style cost structures. Tunable for PoW.      |
-
-#### Optional or Low Priority EIPs
-
-| EIP    | Title                         | Notes                                                                                     |
-|--------|-------------------------------|-------------------------------------------------------------------------------------------|
-| 170    | Contract Code Size Limit      | Mitigates contract bloat; ETC has not faced significant DoS risk. Optional safeguard.     |
-| 3228   | Difficulty Bomb Delay         | Specific to Ethereum’s PoS transition. No impact on ETC.                                  |
-| 7691   | Blob Throughput Increase      | Depends on EIP-4844 (blobs). Not relevant until ETC adopts blob transaction support.      |
-| 7702   | Set EOA Account Code          | Enables future account abstraction; not a current ETC priority.                           |
-
-#### Incompatible or Out of Scope (PoS-Specific)
-
-| EIP(s)                                              | Reason for Exclusion                                                                                                                  |
-|-----------------------------------------------------|----------------------------------------------------------------------------------------------------------------------------------------|
-| 3675, 4895, 4788, 4399, 6110, 7251, 7549, 7002, 7685, 7840 | Related to PoS consensus, validator lifecycle, or beacon chain infrastructure — incompatible with ETC’s PoW design.                    |
-| 4844, 7516                                          | Require blob transactions and consensus-layer modifications. High complexity, low relevance without L2 scaling plans.                 |
-| 2537                                                | Introduces BLS12-381 precompile; adds cryptographic surface area primarily useful for PoS applications. Not applicable to ETC.         |
-
-Any adoption of additional EIPs would require a new ECIP, full community consensus under ECIP-1000, and successful Mordor Testnet validation before mainnet activation.
+All other Ethereum Foundation EIPs — spanning from **Tangerine Whistle (2016)** to **Prague-Electra (2025)** — were reviewed in the **Appendix: EVM Compatibility Roadmap and Upgrade Candidates** section of this ECIP.
 
 ### Related Work
 
@@ -399,26 +360,62 @@ The Olympia Upgrade applies established EVM improvements and adds a single, cons
 
 ### Related ECIPs in the Olympia Upgrade
 
-The Olympia Upgrade is a coordinated set of proposals designed to deliver sustainable, transparent, and decentralized protocol funding for Ethereum Classic. ECIP-1111 provides the consensus-layer foundation by redirecting `BASEFEE` to an immutable on-chain treasury.
+ECIP-1111 is one of four coordinated proposals that together introduce sustainable, decentralized, and transparent protocol funding for Ethereum Classic:
 
-The related proposals are:
-
-- [**ECIP-1111**](https://ecips.ethereumclassic.org/ECIPs/ecip-1111) — *Olympia EVM and Protocol Upgrades*  
+- **[ECIP-1111 — Olympia EVM and Protocol Upgrades](https://ecips.ethereumclassic.org/ECIPs/ecip-1111)**  
   Activates EIP-1559 and EIP-3198 on Ethereum Classic and redirects the `BASEFEE` to the Olympia Treasury instead of burning it.
 
-- [**ECIP-1112**](https://ecips.ethereumclassic.org/ECIPs/ecip-1112) — *Olympia Treasury Contract*  
+- **[ECIP-1112 — Olympia Treasury Contract](https://ecips.ethereumclassic.org/ECIPs/ecip-1112)**  
   Defines the immutable, governance-isolated smart contract that receives all redirected `BASEFEE` revenue and holds it until released by on-chain governance.
 
-- [**ECIP-1113**](https://ecips.ethereumclassic.org/ECIPs/ecip-1113) — *Olympia DAO Governance Framework*  
-  Specifies the decentralized governance architecture that authorizes all treasury disbursements, including proposal submission, voting, and time-locked execution.
+- **[ECIP-1113 — Olympia DAO Governance Framework](https://ecips.ethereumclassic.org/ECIPs/ecip-1113)**  
+  Specifies the decentralized governance architecture that serves as the *sole authorized executor* for Treasury disbursements, including proposal submission, voting, and time-locked execution.
 
-- [**ECIP-1114**](https://ecips.ethereumclassic.org/ECIPs/ecip-1114) — *Ethereum Classic Funding Proposal Process*  
-  Establishes the standardized, permissionless proposal format (ECFP) for requesting funds from the treasury, ensuring transparent and accountable allocation of protocol-level funding.
+- **[ECIP-1114 — Ethereum Classic Funding Proposal Process](https://ecips.ethereumclassic.org/ECIPs/ecip-1114)**  
+  Establishes the standardized, permissionless proposal format (ECFP) for requesting funds from the Treasury, ensuring transparent, hash-bound, and verifiable allocation of protocol-level funding.
+
+#### Interdependency Summary
+
+- **ECIP-1111** enables protocol-level revenue generation via `BASEFEE` redirection.
+- **ECIP-1112** deploys an immutable vault to store that revenue, isolated from governance logic.
+- **ECIP-1113** creates the governance layer that can authorize Treasury disbursements.
+- **ECIP-1114** defines the standardized proposal process that ECIP-1113 enforces for all disbursements.
+
+All four ECIPs are designed for **modular activation**:
+- ECIP-1111 and ECIP-1112 can be deployed first, enabling revenue accumulation.
+- ECIP-1113 and ECIP-1114 can be deployed later, enabling controlled, on-chain governance of Treasury funds.
 
 ### Copyright
 
 Copyright and related rights waived via  
 [CC0](https://creativecommons.org/publicdomain/zero/1.0/).
+
+### Appendix: EVM Precedents for BASEFEE Redirection and EIP-1559 Adoption
+
+ECIP-1111 activates EIP-1559 and EIP-3198 on Ethereum Classic while modifying the default EIP-1559 behavior to redirect the `BASEFEE` to the Olympia Treasury (ECIP-1112) instead of burning it.  
+This approach draws on precedents from EVM-compatible networks that have adopted EIP-1559 or similar fee mechanisms while directing protocol revenue toward ecosystem funding rather than permanent destruction.
+
+#### Precedents for BASEFEE Redirection
+
+| Network         | Fee Mechanism                          | Governance Model                   | Notes                                                                 |
+|-----------------|----------------------------------------|-------------------------------------|-----------------------------------------------------------------------|
+| **Ronin**       | EIP-1559 `BASEFEE` redirected to treasury | Ronin DAO (Snapshot + Multisig)     | Funds infrastructure, validator rewards, and ecosystem growth        |
+| **Celo**        | Gas fees routed to Gas Fee Handler      | Celo Governance                     | Allocates protocol revenue to community funds and climate programs   |
+| **Mantle**      | Sequencer revenue to DAO treasury       | Mantle Governance                   | Uses protocol revenue to fund developer tooling, infrastructure, and grants |
+| **Polygon CDK** | Optional EIP-1559-compatible fee hooks  | Rollup-local DAO governance         | Sovereign rollups can redirect base fees to local treasuries         |
+| **OP Stack**    | Sequencer revenue sharing               | L2-local DAO governance             | Supports public goods funding through governance-controlled revenue  |
+| **Arbitrum**    | Sequencer revenue to DAO treasury       | Arbitrum DAO                        | Allocates funds via AIP proposals and on-chain execution             |
+| **Optimism**    | Sequencer revenue to RPGF               | Bicameral DAO (Token + Citizens)    | Retroactively funds public goods based on measurable impact          |
+
+#### Lessons Applied in ECIP-1111
+
+- **Protocol-Layer Enforcement** — Like Ronin and Celo, ECIP-1111 routes fees at the consensus layer to prevent diversion or bypass.
+- **Sustainability Over Burning** — Redirecting `BASEFEE` creates a non-inflationary funding stream without altering Ethereum Classic’s fixed monetary policy.
+- **Interoperability with Existing EIPs** — Retains full EIP-1559 semantics for transaction pricing and `BASEFEE` calculation, ensuring compatibility with existing tooling.
+- **Deterministic Treasury Address** — Uses a fixed, consensus-recognized address (ECIP-1112) to ensure cross-client consistency.
+- **Governance Isolation** — Revenue is stored in an immutable vault, accessible only via the governance process defined in ECIP-1113 and ECIP-1114.
+
+By adapting the proven concept of EIP-1559 to redirect value to a community-governed treasury rather than burning it, ECIP-1111 ensures that Ethereum Classic captures sustainable, protocol-native funding while preserving its Proof-of-Work and immutability principles.
 
 ### Appendix: EVM Compatibility Roadmap and Upgrade Candidates
 
