--- a/_specs/ecip-1112.md
+++ b/_specs/ecip-1112.md
@@ -448,21 +448,61 @@ Through independent audits, formal verification, and testnet validation, it prov
 
 ### Related ECIPs in the Olympia Upgrade
 
-The Olympia Treasury (ECIP-1112) is one of four coordinated proposals that together introduce sustainable, decentralized, and transparent protocol funding for Ethereum Classic:
+ECIP-1112 is one of four coordinated proposals that together introduce sustainable, decentralized, and transparent protocol funding for Ethereum Classic:
 
-- [**ECIP-1111** — Olympia EVM and Protocol Upgrades](https://ecips.ethereumclassic.org/ECIPs/ecip-1111)  
+- **[ECIP-1111 — Olympia EVM and Protocol Upgrades](https://ecips.ethereumclassic.org/ECIPs/ecip-1111)**  
   Activates EIP-1559 and EIP-3198 on Ethereum Classic and redirects the `BASEFEE` to the Olympia Treasury instead of burning it.
 
-- [**ECIP-1112** — Olympia Treasury Contract](https://ecips.ethereumclassic.org/ECIPs/ecip-1112)  
+- **[ECIP-1112 — Olympia Treasury Contract](https://ecips.ethereumclassic.org/ECIPs/ecip-1112)**  
   Defines the immutable, governance-isolated smart contract that receives all redirected `BASEFEE` revenue and holds it until released by on-chain governance.
 
-- [**ECIP-1113** — Olympia DAO Governance Framework](https://ecips.ethereumclassic.org/ECIPs/ecip-1113)  
-  Specifies the decentralized governance architecture that serves as the sole authorized executor for Treasury disbursements, including proposal submission, voting, and time-locked execution.
+- **[ECIP-1113 — Olympia DAO Governance Framework](https://ecips.ethereumclassic.org/ECIPs/ecip-1113)**  
+  Specifies the decentralized governance architecture that serves as the *sole authorized executor* for Treasury disbursements, including proposal submission, voting, and time-locked execution.
 
-- [**ECIP-1114** — Ethereum Classic Funding Proposal Process](https://ecips.ethereumclassic.org/ECIPs/ecip-1114)  
-  Establishes the standardized, permissionless proposal format (ECFP) for requesting funds from the Treasury, ensuring transparent and verifiable allocation of protocol-level funding.
+- **[ECIP-1114 — Ethereum Classic Funding Proposal Process](https://ecips.ethereumclassic.org/ECIPs/ecip-1114)**  
+  Establishes the standardized, permissionless proposal format (ECFP) for requesting funds from the Treasury, ensuring transparent, hash-bound, and verifiable allocation of protocol-level funding.
+
+#### Interdependency Summary
+
+- **ECIP-1111** enables protocol-level revenue generation via `BASEFEE` redirection.
+- **ECIP-1112** deploys an immutable vault to store that revenue, isolated from governance logic.
+- **ECIP-1113** creates the governance layer that can authorize Treasury disbursements.
+- **ECIP-1114** defines the standardized proposal process that ECIP-1113 enforces for all disbursements.
+
+All four ECIPs are designed for **modular activation**:
+- ECIP-1111 and ECIP-1112 can be deployed first, enabling revenue accumulation.
+- ECIP-1113 and ECIP-1114 can be deployed later, enabling controlled, on-chain governance of Treasury funds.
 
 ### Copyright
 
 Copyright and related rights waived via  
 [CC0](https://creativecommons.org/publicdomain/zero/1.0/)
+
+### Appendix: EVM Precedents for Treasury Design
+
+The Olympia Treasury (ECIP-1112) is an immutable, governance-isolated smart contract that receives protocol-level revenue redirected at the consensus layer under ECIP-1111.  
+Its design builds on established treasury mechanisms from other EVM-compatible networks that have demonstrated the ability to securely hold and disburse large-scale on-chain funds under community governance.
+
+#### Treasury Design Precedents
+
+| Network           | Treasury Mechanism                               | Governance Model                   | Notes                                                                 |
+|-------------------|--------------------------------------------------|-------------------------------------|-----------------------------------------------------------------------|
+| **Ronin**         | `BASEFEE` redirected to DAO-controlled treasury  | Ronin DAO (Snapshot + Multisig)     | Funds infrastructure, staking rewards, and ecosystem grants          |
+| **Celo**          | Gas fees routed to DAO-managed fee handler       | Celo Governance                     | Supports validators, climate initiatives, and public goods           |
+| **Mantle**        | Sequencer revenue sent to DAO treasury           | Mantle Governance                   | Funds developer tooling, infrastructure, and ecosystem growth        |
+| **Polygon CDK**   | Optional EIP-1559-compatible fee hooks           | Rollup-local DAO governance         | Enables sovereign rollups to route base fees to local treasuries     |
+| **OP Stack**      | Sequencer revenue split                          | L2-local DAO governance             | Public goods funding via governance-controlled revenue sharing        |
+| **Arbitrum**      | Sequencer revenue to DAO treasury                | Arbitrum DAO                        | Allocates funds via the AIP process                                   |
+| **Optimism**      | Sequencer revenue to Retroactive Public Goods Funding | Bicameral DAO (Token + Citizens) | Retroactive rewards for measurable public goods impact               |
+| **Avalanche Subnets** | Transaction fees routed to subnet treasuries | Validator governance                | Validator-managed maintenance and ecosystem growth funding           |
+| **Gitcoin DAO**   | Treasury funded via tokenomics and partnerships  | Gitcoin DAO governance              | Quadratic funding and grants for open-source public goods             |
+
+#### Key Design Lessons Applied in ECIP-1112
+
+- **Immutable Vaults** — Treasury contracts must be immutable after deployment, with no upgrade paths or admin keys; ECIP-1112 enforces this by design.
+- **Consensus-Layer Revenue Routing** — Like Ronin and Celo, ECIP-1112 receives funds automatically at the protocol layer, preventing diversion or bypass.
+- **Governance-Isolated Execution** — Treasury disbursements are possible only via an authorized governance contract (ECIP-1113) using a hash-bound execution model.
+- **Transparent On-Chain Accounting** — All inflows and outflows are recorded on-chain, with standardized events to enable third-party indexing and auditing.
+- **Compatibility with Milestone-Based Funding** — The treasury can support single, staged, or recurring disbursements as defined in funding proposals (ECIP-1114).
+
+By adapting these proven treasury models to Ethereum Classic’s Proof-of-Work consensus and immutability principles, ECIP-1112 ensures secure, transparent, and sustainable custody of protocol-level funds.
