--- a/_specs/ecip-1113.md
+++ b/_specs/ecip-1113.md
@@ -732,10 +732,10 @@ ECIP-1113 is one of four coordinated proposals that together introduce sustainab
 
 #### Interdependency Summary
 
-- ECIP-1111 enables protocol-level revenue generation via `BASEFEE` redirection.
-- ECIP-1112 deploys an immutable vault to store that revenue, isolated from governance logic.
-- ECIP-1113 creates the governance layer that can authorize Treasury disbursements.
-- ECIP-1114 defines the standardized proposal process that ECIP-1113 enforces for all disbursements.
+- **ECIP-1111** enables protocol-level revenue generation via `BASEFEE` redirection.
+- **ECIP-1112** deploys an immutable vault to store that revenue, isolated from governance logic.
+- **ECIP-1113** creates the governance layer that can authorize Treasury disbursements.
+- **ECIP-1114** defines the standardized proposal process that ECIP-1113 enforces for all disbursements.
 
 All four ECIPs are designed for **modular activation**:
 - ECIP-1111 and ECIP-1112 can be deployed first, enabling revenue accumulation.
@@ -745,3 +745,41 @@ All four ECIPs are designed for **modular activation**:
 
 Copyright and related rights waived via  
 [CC0](https://creativecommons.org/publicdomain/zero/1.0/)
+
+### Appendix: EVM Precedents for Treasury and Governance Design
+
+Olympia DAO’s governance framework (ECIP-1113) builds on established, audited patterns for managing protocol-level treasuries through decentralized, permissionless decision-making.  
+These precedents demonstrate that high-value ecosystem resources can be allocated transparently, securely, and sustainably.
+
+#### Governance Architecture Precedents
+
+| Governance Model           | Key Features                                                      | Notable Deployments                                    |
+|----------------------------|-------------------------------------------------------------------|--------------------------------------------------------|
+| **Compound Governor Bravo**| Proposal lifecycle, configurable quorum/threshold, timelock      | Compound, Uniswap, ENS DAO                             |
+| **OpenZeppelin Governor**  | Modular governance with pluggable voting and timelock integration | ENS DAO, Gitcoin DAO, multiple DAOs across EVM chains  |
+| **Aragon OSx**             | Modular core, permissions system, plugin-based execution         | Aragon DAOs, custom DAO deployments                   |
+| **ENS DAO Governance**     | Token-holder delegation, on-chain proposal execution             | ENS DAO                                                |
+| **Aave Governance**        | Layered governance, delegated voting, risk committee             | Aave DAO                                               |
+| **MakerDAO (MIPs)**        | Structured proposal framework, domain expert review              | MakerDAO                                               |
+| **Gitcoin DAO**            | Sybil-resistant community voting, funding rounds                 | Gitcoin DAO                                            |
+
+These frameworks provide proven mechanisms for:
+- Permissionless proposal submission
+- Configurable quorum and approval thresholds
+- Transparent on-chain voting and execution
+- Upgradeable yet auditable governance logic
+
+#### Treasury Governance Precedents
+
+While ECIP-1113 focuses on governance, it operates in tandem with the Olympia Treasury (ECIP-1112), which draws on patterns from other EVM networks that route endogenous network revenue to immutable, community-governed vaults.  
+Notable examples include **Ronin**, **Celo**, **Mantle**, **Polygon CDK**, and **Arbitrum**, which demonstrate the viability of DAO-managed treasuries for funding public goods and infrastructure.
+
+For a full list of treasury design precedents, see the “Related Work” section of [ECIP-1112](https://ecips.ethereumclassic.org/ECIPs/ecip-1112).
+
+#### Summary
+
+By combining:
+- Governance best practices from proven DAO frameworks
+- Treasury custody patterns from high-value, production EVM networks
+
+…Olympia DAO ensures that Ethereum Classic’s protocol-level funding is managed with maximum transparency, security, and decentralization, while remaining adaptable to future governance innovations.
