--- a/_specs/ecip-1111.md
+++ b/_specs/ecip-1111.md
@@ -28,7 +28,7 @@ This ECIP proposes the activation of select Ethereum protocol upgrades on Ethere
 
 These changes improve interoperability with Ethereum and other EVM-based networks, while preserving Ethereum Classic’s Proof-of-Work consensus and principles of immutability.
 
-All `BASEFEE` revenue is redirected to the **Olympia Treasury** (ECIP-1112), an immutable, governance-isolated smart contract governed exclusively by on-chain proposals approved through **Olympia DAO** (ECIP-1113) and executed via the Ethereum Classic Funding Proposal Process (ECIP-1114). Off-chain administrative execution and optional fiat interfacing are supported by the **Ethereum Classic DAO LLC**, a Wyoming-registered legal wrapper that operates strictly under binding instructions from on-chain governance, with no discretionary control.
+All `BASEFEE` revenue is redirected to the **Olympia Treasury** (ECIP-1112), governed exclusively through the **DAO-designated execution contract** (ECIP-1113) via the Ethereum Classic Funding Proposal Process (ECIP-1114). Off-chain administrative execution and optional fiat interfacing are supported by the **Ethereum Classic DAO LLC**, a Wyoming-registered legal wrapper that operates strictly under binding instructions from on-chain governance, with no discretionary control.
 
 This upgrade explicitly excludes changes related to Ethereum’s Proof-of-Stake transition, including validator operations and beacon-chain-based randomness, which are not applicable to Ethereum Classic. Implementation requires coordinated deployment across client software and node operators, with block heights to be finalized for both **Mordor Testnet** and **Mainnet** activation. Olympia DAO does not launch with a governance token. The system supports future upgrades to more decentralized governance models, including quadratic voting, veOLY staking, and soulbound token delegation (see ECIP-1113).
 
@@ -191,7 +191,7 @@ This modular rollout allows ECIP-1111 to be activated independently:
 - **Funds remain secure** in the treasury until governance is activated via ECIP-1113 and disbursement rules are applied through the Ethereum Classic Funding Proposal Process (ECIP-1114).
 
 Activation of governance control over the Olympia Treasury requires:
-- Deployment of the [Olympia DAO Governance Framework (ECIP-1113)](https://ecips.ethereumclassic.org/ECIPs/ecip-1113), which serves as the sole authorized executor of treasury disbursements.
+- Deployment of the [Olympia DAO Governance Framework (ECIP-1113)](https://ecips.ethereumclassic.org/ECIPs/ecip-1113), which serves as the **designated on-chain execution contract for treasury disbursements.**
 - Compliance with the [Ethereum Classic Funding Proposal Process (ECIP-1114)](https://ecips.ethereumclassic.org/ECIPs/ecip-1114) for all treasury allocations.
 These dependencies ensure that treasury control is never transferred without full community-approved governance infrastructure in place.
 
