--- a/_specs/ecip-1112.md
+++ b/_specs/ecip-1112.md
@@ -23,7 +23,7 @@ All `BASEFEE` revenue is redirected at the protocol level and disbursed only upo
 
 This ECIP specifies the deployment of the **Olympia Treasury**, a protocol-level smart contract at a fixed, deterministic address on the Ethereum Classic network. Upon activation of [ECIP-1111](https://ecips.ethereumclassic.org/ECIPs/ecip-1111) — which implements EIP-1559 and redirects `BASEFEE` revenue — all `BASEFEE` amounts SHALL be transferred to this contract instead of being burned.
 
-The Olympia Treasury serves as an immutable, externally auditable funding vault for Ethereum Classic. It accumulates protocol-level fee revenue and is designed to interoperate securely with the **Olympia DAO** ([ECIP-1113](https://ecips.ethereumclassic.org/ECIPs/ecip-1113)), which is the **sole authorized executor** for disbursements. All withdrawals MUST be initiated through on-chain proposals following the **Ethereum Classic Funding Proposal (ECFP) process** ([ECIP-1114](https://ecips.ethereumclassic.org/ECIPs/ecip-1114)).
+The Olympia Treasury serves as an immutable, externally auditable funding vault for Ethereum Classic. It accumulates protocol-level fee revenue and is designed to interoperate securely with the **Olympia DAO** ([ECIP-1113](https://ecips.ethereumclassic.org/ECIPs/ecip-1113)), which is the **only governance-authorized execution contract permitted** to initiate disbursements. All withdrawals MUST be initiated through on-chain proposals following the **Ethereum Classic Funding Proposal (ECFP) process** ([ECIP-1114](https://ecips.ethereumclassic.org/ECIPs/ecip-1114)).
 
 Execution of approved ECFPs uses a **hash-bound disbursement model** consistent with ECIP-1114’s “Metadata and Proposal Integrity” section, ensuring that each release is cryptographically bound to immutable proposal metadata (proposal ID, recipient, amount, metadata CID, and chain ID).
 
@@ -110,7 +110,7 @@ The Olympia Treasury contract MUST meet the following technical constraints:
 
 #### Governance Integration
 
-The Treasury contract SHALL expose a restricted interface callable only by the **authorized DAO executor contract** defined in [ECIP-1113](https://ecips.ethereumclassic.org/ECIPs/ecip-1113).  
+The Treasury contract SHALL expose a restricted interface callable only by the **DAO-designated execution contract** defined in [ECIP-1113](https://ecips.ethereumclassic.org/ECIPs/ecip-1113).  
 This interface MUST include:
 - `release()` and/or `execute()` disbursement functions, callable only by the authorized DAO executor.
 - Execution MUST follow the **hash-bound disbursement** model described in [ECIP-1114](https://ecips.ethereumclassic.org/ECIPs/ecip-1114), where the `proposalHash` is computed as:
