--- a/_specs/ecip-1113.md
+++ b/_specs/ecip-1113.md
@@ -13,7 +13,7 @@ license: CC0-1.0
 
 ### Simple Summary
 
-This ECIP defines the on-chain governance framework for **Olympia DAO**, the *sole authorized executor* of disbursements from the immutable **Olympia Treasury** (ECIP-1112) funded by `BASEFEE` revenue redirected under ECIP-1111.  
+This ECIP defines the on-chain governance framework for **Olympia DAO**, the **DAO-designated execution contract** for disbursements from the immutable **Olympia Treasury** (ECIP-1112) funded by `BASEFEE` revenue redirected under ECIP-1111.  
 Olympia DAO enables transparent, permissionless proposal submission, on-chain voting, and time-locked execution of approved allocations through the standardized **Ethereum Classic Funding Proposal (ECFP) process** (ECIP-1114).  
 
 It ensures that protocol-level funds are allocated in accordance with Ethereum Classic’s principles of decentralization, neutrality, and sustainability, with all disbursements cryptographically bound to immutable proposal metadata.  
@@ -24,7 +24,7 @@ It ensures that protocol-level funds are allocated in accordance with Ethereum C
 
 ### Abstract
 
-This ECIP specifies the architecture of **Olympia DAO** — the decentralized governance system that serves as the *sole authorized executor* for releasing funds from the immutable **Olympia Treasury** (ECIP-1112), which accumulates `BASEFEE` revenue redirected at the consensus layer under ECIP-1111.  
+This ECIP specifies the architecture of **Olympia DAO** — the decentralized governance system that serves as the **only governance-authorized execution path** for releasing funds from the immutable **Olympia Treasury** (ECIP-1112), which accumulates `BASEFEE` revenue redirected at the consensus layer under ECIP-1111.  
 
 Olympia DAO operates entirely on-chain, enabling permissionless proposal submission, voting, and time-locked execution of approved disbursements through the standardized **Ethereum Classic Funding Proposal (ECFP) process** (ECIP-1114).  
 
@@ -86,7 +86,7 @@ The DAO MUST implement the following core components:
   - The Treasury MUST reject any call from an unauthorized caller or with mismatched proposal hash (per ECIP-1112).
 
 - **Treasury Access Control**  
-  - The DAO’s executor SHALL be the *sole authorized caller* of the Treasury’s disbursement functions.
+  - The DAO’s execution contract SHALL be the **exclusive governance-authorized caller** of the Treasury’s disbursement functions.
   - No other contract, EOA, or multisig MAY bypass this control path.
 
 - **On-Chain Transparency**  
@@ -579,7 +579,7 @@ This supports the **modular activation strategy** defined in ECIP-1111, allowing
 #### Governance Activation Phase
 
 - Olympia DAO (ECIP-1113) is deployed after security audits, testnet validation, and community onboarding.
-- Once the DAO’s executor address is set in the Treasury contract, it becomes the **sole authorized caller** of the Treasury’s disbursement functions.
+- Once the DAO’s executor address is set in the Treasury contract, it becomes the **only governance-authorized contract permitted** to call the Treasury’s disbursement functions
 - At activation, the ECFP process (ECIP-1114) becomes the exclusive pathway for all fund allocations.
 
 #### Benefits of Decoupling
