--- a/_specs/ecip-1114.md
+++ b/_specs/ecip-1114.md
@@ -14,7 +14,7 @@ license: CC0-1.0
 ### Simple Summary
 
 This ECIP defines the **Ethereum Classic Funding Proposal (ECFP)** process — the **exclusive, standardized, and permissionless mechanism** for requesting and executing funding from the **Olympia Treasury** ([ECIP-1112](https://ecips.ethereumclassic.org/ECIPs/ecip-1112)).  
-The ECFP process is enforced by the **Olympia DAO** ([ECIP-1113](https://ecips.ethereumclassic.org/ECIPs/ecip-1113)), the sole authorized executor of treasury disbursements, and governs the allocation of `BASEFEE` revenue redirected under [ECIP-1111](https://ecips.ethereumclassic.org/ECIPs/ecip-1111).
+The ECFP process is enforced by the **Olympia DAO** ([ECIP-1113](https://ecips.ethereumclassic.org/ECIPs/ecip-1113)), enforced by the Olympia DAO (ECIP-1113) through its **governance-authorized execution contract for treasury disbursements**, and governs the allocation of `BASEFEE` revenue redirected under [ECIP-1111](https://ecips.ethereumclassic.org/ECIPs/ecip-1111).
 
 It provides a reproducible, transparent structure for:
 - **Submission** — Any participant may submit proposals without prior permission.
@@ -217,7 +217,7 @@ This structure ensures:
   - Recurring or operational budgets
   - Multi-phase or milestone-based grants
 
-- The **Olympia DAO** contract, as defined in [ECIP-1113](https://ecips.ethereumclassic.org/ECIPs/ecip-1113), SHALL be the **sole authorized caller** of the Treasury’s `release()` and `execute()` functions.
+- The **Olympia DAO** contract, as defined in [ECIP-1113](https://ecips.ethereumclassic.org/ECIPs/ecip-1113), SHALL be the **only governance-authorized contract permitted** to call the Treasury’s `release()` and `execute()` functions.
 - All fund movements from the Treasury MUST:
   - Be authorized exclusively by successful DAO proposals following the ECFP lifecycle
   - Be executed through the **hash-bound disbursement model** `(ecfpId, recipient, amount, metadataCID, chainid)` per ECIP-1112
